--- a/src/main/res/values-tr/strings.xml
+++ b/src/main/res/values-tr/strings.xml
@@ -18,15 +18,15 @@
     <string name="safetyNet_check_success">SafetyNet Kontrolü Başarılı</string>
 	<string name="safetyNet_api_error">SafetyNet API Hatası</string>
     <string name="safetyNet_network_loss">Ağ bağlantısı kullanılamıyor</string>
-    <string name="safetyNet_service_disconnected">Servis sonlandırıldı</string>
+    <string name="safetyNet_service_disconnected">Hizmet sonlandırıldı</string>
     <string name="safetyNet_res_invalid">Yanıt geçersiz</string>
 
     <!--Install Fragment-->
     <string name="advanced_settings_title">Gelişmiş Ayarlar</string>
     <string name="keep_force_encryption">Şifrelemeyi zorlamayı sürdür</string>
     <string name="keep_dm_verity">"Dm-verity\'yi koru"</string>
-    <string name="current_magisk_title">Yüklenen Sürüm: %1$s</string>
-    <string name="install_magisk_title">Güncel Sürüm: %1$s</string>
+    <string name="current_magisk_title">Yüklü Sürüm: %1$s</string>
+    <string name="install_magisk_title">Yeni Sürüm: %1$s</string>
     <string name="uninstall">Kaldır</string>
     <string name="uninstall_magisk_title">"Magisk\'i kaldır"</string>
     <string name="uninstall_magisk_msg">Tüm modüller devre dışı bırakılacak/kaldırılacaktır. Kök erişimi kaldırılacak ve verileriniz şu anda şifrelenmemişse potansiyel olarak verileriniz şifrelenecek</string>
@@ -98,7 +98,7 @@
     <string name="flashing">Yükleyin</string>
     <string name="hide_manager_toast">Magisk Manager\'ı Gizle…</string>
 	<string name="hide_manager_toast2">Bu biraz zaman alabilir…</string>
-    <string name="hide_manager_fail_toast">Hide Magisk Manager\'ı Gizleme başarısız oldu…</string>
+    <string name="hide_manager_fail_toast">Magisk Manager\'ı Gizleme başarısız oldu…</string>
     <string name="download_zip_only">Yalnızca Zip Dosyasını İndir</string>
     <string name="patch_boot_file">Önyükleme İmaj Dosyasını Yamala</string>
     <string name="direct_install">Doğrudan Yükleme (Önerilen)</string>
@@ -110,7 +110,7 @@
     <string name="restore_stock_boot">Stok Önyükleme Dosyasını Geri Yükle</string>
     <string name="restore_done">Yenileme tamamlandı!</string>
     <string name="restore_fail">Stok önyükleme yedeği yok!</string>
-	<string name="uninstall_toast">Magisk Manager 5 saniye içinde kaldırdıktan sonra lütfen daha sonra yeniden başlatın.</string>
+	<string name="uninstall_toast">Magisk Manager\'ı 5 saniye içinde kaldırdıktan sonra lütfen daha sonra elle yeniden başlatın</string>
 	<string name="proprietary_title">Tescil Kodunu İndirin</string>
 	<string name="proprietary_notice">Magisk Yöneticisi, FOSS olduğundan Google\'ın tescilli olduğu SafetyNet API kodunu içermez.\n\nMagisk Manager\'in SafetyNet kontrolü için bir uzantıyı (GoogleApiClient içeriyor) indirmesine izin veriyor musunuz?</string>
 	<string name="su_db_corrupt">SU veritabanı bozuk, yeni db oluşturacak</string>
@@ -157,7 +157,7 @@
     <string name="settings_su_reauth_title">Yükseltmeden sonra yeniden kimlik doğrulaması yapın</string>
     <string name="settings_su_reauth_summary">Uygulama yükseltmeleri sonrasında yetkili kullanıcı izinlerini yeniden doğrulama</string>
 
-    <string name="multiuser_mode">Çok Kullanıcılı Modu</string>
+    <string name="multiuser_mode">Çok Kullanıcılı Mod</string>
     <string name="settings_owner_only">Yalnızca Cihaz Sahibi</string>
     <string name="settings_owner_manage">Cihaz Sahibi Tarafından Yönetilen</string>
     <string name="settings_user_independent">Bağımsız Kullanıcı</string>
