--- a/src/main/res/values-tr/strings.xml
+++ b/src/main/res/values-tr/strings.xml
@@ -18,15 +18,15 @@
     <string name="safetyNet_check_success">SafetyNet Kontrolü Başarılı</string>
 	<string name="safetyNet_api_error">SafetyNet API Hatası</string>
     <string name="safetyNet_network_loss">Ağ bağlantısı kullanılamıyor</string>
-    <string name="safetyNet_service_disconnected">Servis sonlandırıldı</string>
+    <string name="safetyNet_service_disconnected">Hizmet sonlandırıldı</string>
     <string name="safetyNet_res_invalid">Yanıt geçersiz</string>
 
     <!--Install Fragment-->
     <string name="advanced_settings_title">Gelişmiş Ayarlar</string>
     <string name="keep_force_encryption">Şifrelemeyi zorlamayı sürdür</string>
     <string name="keep_dm_verity">"Dm-verity\'yi koru"</string>
-    <string name="current_magisk_title">Yüklenen Sürüm: %1$s</string>
-    <string name="install_magisk_title">Güncel Sürüm: %1$s</string>
+    <string name="current_magisk_title">Yüklü Sürüm: %1$s</string>
+    <string name="install_magisk_title">Yeni Sürüm: %1$s</string>
     <string name="uninstall">Kaldır</string>
     <string name="uninstall_magisk_title">"Magisk\'i kaldır"</string>
     <string name="uninstall_magisk_msg">Tüm modüller devre dışı bırakılacak/kaldırılacaktır. Kök erişimi kaldırılacak ve verileriniz şu anda şifrelenmemişse potansiyel olarak verileriniz şifrelenecek</string>
@@ -41,6 +41,9 @@
     <string name="disable_file_created">Modül sonraki yeniden başlatmada devre dışı bırakılacak</string>
     <string name="disable_file_removed">Modül sonraki yeniden başlatmada etkinleştirilecek</string>
     <string name="author">Yapımcı: %1$s</string>
+    <string name="reboot_recovery">Kurtarma modunda yeniden başlat</string>
+    <string name="reboot_bootloader">Önyükleyici modunda yeniden başlat</string>
+    <string name="reboot_download">Yükleme modunda yeniden başlat</string>
 
     <!--Repo Fragment-->
     <string name="update_available">Güncelleme Mevcut</string>
@@ -93,26 +96,26 @@
     <string name="manager_update_title">Yeni Magisk Manager Güncellemesi Mevcut!</string>
     <string name="manager_download_install">İndirmek ve yüklemek için dokunun</string>
 	<string name="dtbo_patched_title">DTBO yamalandı!</string>
-	<string name="dtbo_patched_reboot">Magisk Manager dtbo.img'yi yamaladı, lütfen yeniden başlat</string>
+	<string name="dtbo_patched_reboot">Magisk Manager dtbo.img\'yi yamaladı, lütfen yeniden başlatın</string>
     <string name="magisk_updates">Magisk Güncellemeleri</string>
-    <string name="flashing">Yükleyin</string>
-    <string name="hide_manager_toast">Magisk Manager\'ı Gizle…</string>
+    <string name="flashing">Yükleniyor</string>
+    <string name="hide_manager_toast">Magisk Manager Gizleniyor…</string>
 	<string name="hide_manager_toast2">Bu biraz zaman alabilir…</string>
-    <string name="hide_manager_fail_toast">Hide Magisk Manager\'ı Gizleme başarısız oldu…</string>
+    <string name="hide_manager_fail_toast">Magisk Manager\'ı Gizleme başarısız oldu…</string>
     <string name="download_zip_only">Yalnızca Zip Dosyasını İndir</string>
     <string name="patch_boot_file">Önyükleme İmaj Dosyasını Yamala</string>
-    <string name="direct_install">Doğrudan Yükleme (Önerilen)</string>
-	<string name="install_second_slot">İkinci Yuvaya Yükle (OTA'dan sonra)</string>
+    <string name="direct_install">Doğrudan Yükle (Önerilen)</string>
+	<string name="install_second_slot">İkinci Yuvaya Yükle (OTA\'dan sonra)</string>
     <string name="select_method">Yöntem Seçin</string>
-    <string name="no_boot_file_patch_support">Hedef Magisk sürümü önyükleme imaj dosyasını yamalamayı desteklemez</string>
+    <string name="no_boot_file_patch_support">Hedef Magisk sürümü önyükleme imaj dosyasını yamalamayı desteklemiyor</string>
     <string name="boot_file_patch_msg">.img veya .img.tar formatında stok önyükleme imajını seçin</string>
     <string name="complete_uninstall">Tamamen Kaldır</string>
     <string name="restore_stock_boot">Stok Önyükleme Dosyasını Geri Yükle</string>
     <string name="restore_done">Yenileme tamamlandı!</string>
     <string name="restore_fail">Stok önyükleme yedeği yok!</string>
-	<string name="uninstall_toast">Magisk Manager 5 saniye içinde kaldırdıktan sonra lütfen daha sonra yeniden başlatın.</string>
+	<string name="uninstall_toast">Magisk Manager\'ı 5 saniye içinde kaldırdıktan sonra lütfen daha sonra elle yeniden başlatın</string>
 	<string name="proprietary_title">Tescil Kodunu İndirin</string>
-	<string name="proprietary_notice">Magisk Yöneticisi, FOSS olduğundan Google\'ın tescilli olduğu SafetyNet API kodunu içermez.\n\nMagisk Manager\'in SafetyNet kontrolü için bir uzantıyı (GoogleApiClient içeriyor) indirmesine izin veriyor musunuz?</string>
+	<string name="proprietary_notice">Magisk Yöneticisi, FOSS olduğundan Google\'ın tescilli olduğu SafetyNet API kodunu içermez.\n\nMagisk Manager\'ın SafetyNet kontrolü için bir uzantıyı (GoogleApiClient içeriyor) indirmesine izin veriyor musunuz?</string>
 	<string name="su_db_corrupt">SU veritabanı bozuk, yeni db oluşturacak</string>
  
     <!--Settings Activity -->
@@ -157,7 +160,7 @@
     <string name="settings_su_reauth_title">Yükseltmeden sonra yeniden kimlik doğrulaması yapın</string>
     <string name="settings_su_reauth_summary">Uygulama yükseltmeleri sonrasında yetkili kullanıcı izinlerini yeniden doğrulama</string>
 
-    <string name="multiuser_mode">Çok Kullanıcılı Modu</string>
+    <string name="multiuser_mode">Çok Kullanıcılı Mod</string>
     <string name="settings_owner_only">Yalnızca Cihaz Sahibi</string>
     <string name="settings_owner_manage">Cihaz Sahibi Tarafından Yönetilen</string>
     <string name="settings_user_independent">Bağımsız Kullanıcı</string>
@@ -173,6 +176,7 @@
     <string name="global_summary">Tüm kök oturumları genel bağlama ad alanını kullanır</string>
     <string name="requester_summary">Kök oturumları, istekte bulunanın ad alanını devralır</string>
     <string name="isolate_summary">Her bir kök oturumunun kendi izole ad alanı olacaktır</string>
+    <string name="android_o_not_support">Android 8.0 ve üzerinde desteklenmiyor</string>
 
     <!--Superuser-->
     <string name="su_request_title">Yetkili Kullanıcı İsteği</string>
