updated german translation

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -45,6 +45,9 @@
     <string name="disable_file_created">Modul wird beim nächsten Neustart deaktiviert</string>
     <string name="disable_file_removed">Modul wird beim nächsten Neustart aktiviert</string>
     <string name="author">Erstellt von %1$s</string>
+    <string name="reboot_recovery">Neustart in die Recovery</string>
+    <string name="reboot_bootloader">Neustart in den Bootloader</string>
+    <string name="reboot_download">Neustart in den Download-Modus</string>
 
     <!--Repo Fragment-->
     <string name="update_available">Aktualisierung verfügbar</string>
@@ -112,6 +115,8 @@
     <string name="boot_file_patch_msg">Selektiere das originale Boot image dump im Format .img oder .img.tar</string>
     <string name="complete_uninstall">Komplette Deinstallation</string>
     <string name="restore_stock_boot">Stelle originalen Boot wieder her</string>
+    <string name="restore_img">Stelle Images wieder her</string>
+    <string name="uninstall_app">Deinstalliere die Anwendung</string>
     <string name="restore_done">Wiederherstellung durchgeführt!</string>
     <string name="restore_fail">Kein Original Backup vorhanden!</string>
     <string name="uninstall_toast">Deinstalliere Magisk Manager in 5 Sekunden, bitte im Anschluss manuell neustarten</string>
