--- a/src/main/res/values-pl/strings.xml
+++ b/src/main/res/values-pl/strings.xml
@@ -142,7 +142,7 @@
 	<string name="settings_update_custom_msg">Wstaw własny URL</string>
 	<string name="settings_boot_format_title">Poprawny format pliku rozruchowego</string>
     <string name="settings_boot_format_summary">Wybierz format pliku boot image.\nWybierz .img dla wgrywania poprzez Fastboot/Download Mode. Wybierz .img.tar dla ODINA.</string>
-    <string name="settings_core_only_title">Tylko Tryb Rdzeni Magisk</string>
+    <string name="settings_core_only_title">Tylko Podstawowy Tryb Magisk</string>
     <string name="settings_core_only_summary">Włącz tylko podstawowe funkcje, wszystkie moduły nie zostaną załadowane. MagiskSU, MagiskHide i systemless hosts nadal będą włączone</string>
     <string name="settings_magiskhide_summary">Włącz Magisk Hide dla wykrytych aplikacji</string>
     <string name="settings_hosts_title">Włącz systemless hosts</string>
