--- a/src/main/res/values-zh-rCN/strings.xml
+++ b/src/main/res/values-zh-rCN/strings.xml
@@ -30,7 +30,7 @@
     <string name="install_magisk_title">最新的版本：%1$s</string>
     <string name="uninstall">卸载</string>
     <string name="uninstall_magisk_title">卸载 Magisk</string>
-    <string name="uninstall_magisk_msg">所有模块将会被停用 / 删除。root会被移除，并有可能在目前数据未加密的情况下被加密</string>
+    <string name="uninstall_magisk_msg">所有模块将停用或删除，Root 会被移除。未加密的设备重启时可能会被进行加密。</string>
     <string name="update">更新 %1$s</string>
 
     <!--Module Fragment-->
@@ -109,6 +109,8 @@
     <string name="no_boot_file_patch_support">目标安装版本不支持修补 Boot 镜像文件</string>
     <string name="boot_file_patch_msg">选择原厂 Boot 镜像备份；支持 .img 以及 .img.tar 格式</string>
     <string name="complete_uninstall">完全卸载</string>
+    <string name="restore_img">还原原厂镜像</string>
+    <string name="uninstall_app">卸载应用</string>
     <string name="restore_done">还原完成！</string>
     <string name="restore_fail">原厂 Boot 镜像备份不存在！</string>
     <string name="uninstall_toast">将在 5 秒内卸载 Magisk Manager，接下来请手动重新启动</string>
