--- a/src/main/res/values-de/strings.xml
+++ b/src/main/res/values-de/strings.xml
@@ -55,7 +55,7 @@
     <string name="not_installed">Nicht installiert</string>
 
     <!--Log Fragment-->
-    <string name="menuSaveLog">Log auf speichern</string>
+    <string name="menuSaveLog">Protokoll speichern</string>
     <string name="menuReload">Log erneut laden</string>
     <string name="menuClearLog">Log löschen</string>
     <string name="logs_cleared">Log gelöscht</string>
