--- a/src/main/res/values-pl/strings.xml
+++ b/src/main/res/values-pl/strings.xml
@@ -27,7 +27,7 @@
 
     <!--Install Fragment-->
     <string name="advanced_settings_title">Zaawansowane Ustawienia</string>
-    <string name="keep_force_encryption">Zachowaj Szyfrowanie</string>
+    <string name="keep_force_encryption">Zachowaj force encryption</string>
     <string name="keep_dm_verity">Zachowaj AVB 2.0/dm-verity</string>
     <string name="current_magisk_title">Zainstalowana Wersja: %1$s</string>
     <string name="install_magisk_title">Ostatnia Wersja: %1$s</string>
@@ -53,6 +53,10 @@
     <string name="update_available">Aktualizacja jest dostępna</string>
     <string name="installed">Zainstalowany</string>
     <string name="not_installed">Nie zainstalowany</string>
+	<string name="updated_on">Zaktualizowano: %1$s</string>
+    <string name="sorting_order">Kolejność Sortowania</string>
+    <string name="sort_by_name">Sortuj po nazwie</string>
+    <string name="sort_by_update">Sortuj po ostatniej aktualizacji</string>
 
     <!--Log Fragment-->
     <string name="menuSaveLog">Zapisz log</string>
@@ -112,7 +116,9 @@
     <string name="no_boot_file_patch_support">Wersja docelowa programu Magisk nie obsługuje ładowania pliku boot image</string>
     <string name="boot_file_patch_msg">Wybierz stock boot image w formacie .img lub .img.tar</string>
     <string name="complete_uninstall">Odinstalowywanie Zakończone</string>
-    <string name="restore_done">Przywracanie zakończone!</string>
+    <string name="restore_img">Przywróć Obraz</string>
+	<string name="uninstall_app">Odinstaluj Aplikację</string>
+	<string name="restore_done">Przywracanie zakończone!</string>
     <string name="restore_fail">Stock backup nie istnieje!</string>
     <string name="uninstall_toast">Odinstalowanie Magisk Manager w ciągu 5 sekund, proszę następnie ręcznie ponownie uruchomić urządzenie</string>
     <string name="proprietary_title">Pobierz Kod</string>
