--- a/src/main/res/values-de/strings.xml
+++ b/src/main/res/values-de/strings.xml
@@ -4,7 +4,7 @@
 
 
     <!--Welcome Activity-->
-
+    <string name="magiskhide" translatable="false">Magisk Verstecken</string>
     <string name="modules">Module</string>
     <string name="downloads">Downloads</string>
     <string name="superuser">Superuser</string>
@@ -53,6 +53,10 @@
     <string name="update_available">Aktualisierung verfügbar</string>
     <string name="installed">Installiert</string>
     <string name="not_installed">Nicht installiert</string>
+    <string name="updated_on">Aktualisiert am: %1$s</string>
+    <string name="sorting_order">Sortierreihenfolge</string>
+    <string name="sort_by_name">Sortieren nach Name</string>
+    <string name="sort_by_update">Sortieren nach dem letzten Update</string>    
 
     <!--Log Fragment-->
     <string name="menuSaveLog">Protokoll speichern</string>
@@ -179,6 +183,7 @@
     <string name="global_summary">Alle Root-Sitzungen benutzen den global angelegten Namensraum</string>
     <string name="requester_summary">Root-Sitzungen erben den Namensraum des Abfragenden</string>
     <string name="isolate_summary">Jede Root-Sitzung hat ihren isolierten Namensraum</string>
+    <string name="android_o_not_support">Unterstützt Android 8.0+ nicht</string>    
 
     <!--Superuser-->
     <string name="su_request_title">Superuser-Anfrage</string>
